Update footer content and copyright year

--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,4 @@
 <footer>
-  <p>© <span id="footer-year"></span> Prashant Rana. All rights reserved.</p>
+  <p>©2026 <span id="footer-year"></span> Vijayalakshmi Subbiah. All rights reserved.</p>
 </footer>
+
