Modify work.html with new author details
Updated work experience details and meta information.

--- a/work.html
+++ b/work.html
@@ -11,21 +11,21 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Work Experience - Prashant Rana</title>
-    <meta name="description" content="Enterprise products, side projects, and AI experiments. APIs, integrations, ML/AI, and platform work at Avalara, Oracle, ZS Associates, and more.">
+    <title>Work Experience - Viji Subbiah</title>
+    <meta name="description" content="Enterprise products, AI capstone projects, Onboarding,KPI dashboard , integrations, ML/AI, and platform work at Honeywell, RSA Security, Impelsys, and more.">
 
     <!-- Open Graph / Social Sharing -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="What I've Built - Prashant Rana">
-    <meta property="og:description" content="Enterprise products, side projects, and AI experiments. APIs, integrations, ML/AI, and platform work.">
-    <meta property="og:image" content="https://prpmdev.github.io/prashant-rana/images/profile-pictures/pr-at-seattle.jpg">
-    <meta property="og:url" content="https://prpmdev.github.io/prashant-rana/work.html">
+    <meta property="og:title" content="What I've Built - Viji Subbiah">
+    <meta property="og:description" content="Enterprise products, AI capstone projects, Onboarding,KPI dashboard , integrations, ML/AI, and platform work.">
+    <meta property="og:image" content="https://vijisdev.github.io/vijisubbiah/images/profile-pictures/viji-subbiah.jpg">
+    <meta property="og:url" content="https://vijisdev.github.io/vijisubbiah/work.html">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="What I've Built - Prashant Rana">
-    <meta name="twitter:description" content="Enterprise products, side projects, and AI experiments. APIs, integrations, ML/AI, and platform work.">
-    <meta name="twitter:image" content="https://prpmdev.github.io/prashant-rana/images/profile-pictures/pr-at-seattle.jpg">
+    <meta name="twitter:title" content="What I've Built - Viji Subbiah">
+    <meta name="twitter:description" content="Enterprise products, AI capstone projects, Onboarding,KPI dashboard , integrations, ML/AI, and platform work.">
+    <meta name="twitter:image" content="https://vijisdev.github.io/vijisubbiah/images/profile-pictures/viji-subbiah.jpg"">
 
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
@@ -38,7 +38,7 @@
     <section class="section work-section">
         <div class="section-header">
             <h1>What I've Built</h1>
-            <p>Enterprise products, side projects, and AI experiments to automate my life.</p>
+            <p>Enterprise products, AI capstone projects, Onboarding,KPI dashboard , integrations, ML/AI, and platform work.</p>
         </div>
 
         <div class="view-toggle">
