Revise reading list for Viji Subbiah
Updated the reading list page to reflect new author and content changes.

--- a/reading-list.html
+++ b/reading-list.html
@@ -11,21 +11,20 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reading List - Prashant Rana</title>
-    <meta name="description" content="Books shaping my product thinking - technical, business, and personal reads from a Senior PM.">
-
+    <title>Reading List - Viji Subbiah</title>
+    <meta name="description" content="Thought Leaders By Matt Church">
     <!-- Open Graph / Social Sharing -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Reading List - Prashant Rana">
-    <meta property="og:description" content="Books shaping my product thinking - technical, business, and personal reads.">
-    <meta property="og:image" content="https://prpmdev.github.io/prashant-rana/images/profile-pictures/pr-at-seattle.jpg">
-    <meta property="og:url" content="https://prpmdev.github.io/prashant-rana/reading-list.html">
+    <meta property="og:title" content="Reading List - Viji Subbiah">
+    <meta property="og:description" content=" Showcase how experts can transform their knowledge into a commercially viable consulting practice by building a strong personal brand. It also helped me with a step-by-step framework to create impact, independence, and financial success without large teams or heavy capital investment.">
+    <meta property="og:image" content="https://vijisdev.github.io/vijisubbiah/images/profile-pictures/IMG_7652.jpg">
+    <meta property="og:url" content="https://vijisdev.github.io/vijisubbiah/reading-list.html">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Reading List - Prashant Rana">
-    <meta name="twitter:description" content="Books shaping my product thinking - technical, business, and personal reads.">
-    <meta name="twitter:image" content="https://prpmdev.github.io/prashant-rana/images/profile-pictures/pr-at-seattle.jpg">
+    <meta name="twitter:title" content="Reading List - Viji Subbiah">
+    <meta name="twitter:description" content="Showcase how experts can transform their knowledge into a commercially viable consulting practice by building a strong personal brand. It also helped me with a step-by-step framework to create impact, independence, and financial success without large teams or heavy capital investment.">
+    <meta name="twitter:image" content="https://vijisdev.github.io/vijisubbiah/images/profile-pictures/IMG_7652.jpg">
 
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="reading-list-styles.css">
@@ -38,7 +37,7 @@
         <section class="reading-section">
             <div class="section-header">
                 <h1>Reading List</h1>
-                <p>Reading shapes our thoughts and approach to life. Here's what's influencing me.</p>
+                <p>Reading books is a trnasformative mental excercise, boosts empathy and provides a different perception about the life and the living.Here are few from my library.</p>
             </div>
 
             <div class="type-toggle">
@@ -55,7 +54,7 @@
             <div id="emptyState" class="empty-state" style="display: none;">
                 <p>Still finding something to read here...</p>
                 <p>Got a recommendation?</p>
-                <a href="https://www.linkedin.com/in/prashantrana/" target="_blank" rel="noopener noreferrer" class="linkedin-cta">Let me know on LinkedIn &rarr;</a>
+                <a href="https://www.linkedin.com/in/beingyesviji/" target="_blank" rel="noopener noreferrer" class="linkedin-cta">Let me know on LinkedIn &rarr;</a>
             </div>
         </section>
     </main>
