--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,3 @@
 <footer>
-  <p>©2026 <span id="footer-year"></span> Vijayalakshmi Subbiah. All rights reserved.</p>
+  <p>©<span id="footer-year"></span> Vijayalakshmi Subbiah. All rights reserved.</p>
 </footer>
