--- a/reading-list.html
+++ b/reading-list.html
@@ -52,7 +52,7 @@
             </div>
 
             <div id="emptyState" class="empty-state" style="display: none;">
-                <p>Still finding something to read here...</p>
+               <!-- <p>Still finding something to read here...</p> -->
                 <p>Got a recommendation?</p>
                 <a href="https://www.linkedin.com/in/beingyesviji/" target="_blank" rel="noopener noreferrer" class="linkedin-cta">Let me know on LinkedIn &rarr;</a>
             </div>
